--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-	"cSpell.words": ["choreservice", "internalerrors"]
+	"cSpell.words": [
+		"choreservice",
+		"internalerrors"
+	],
+	"git.ignoreLimitWarning": true
 }
