Move chore to value object

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
 		"chorescontroller",
 		"choreservice",
 		"gorm",
-		"internalerrors"
+		"internalerrors",
+		"valueobjects"
 	],
 	"git.ignoreLimitWarning": true
 }
