--- a/web/package.json
+++ b/web/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
-  "description": "",
-  "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "solid-devtools": "^0.29.2",
-    "vite": "^5.0.11",
-    "vite-plugin-solid": "^2.8.2"
-  },
-  "dependencies": {
-    "solid-js": "^1.8.11"
-  }
+	"name": "home-manager",
+	"version": "0.0.0",
+	"description": "an application to manage your home",
+	"scripts": {
+		"start": "vite",
+		"dev": "vite",
+		"build": "vite build",
+		"serve": "vite preview"
+	},
+	"license": "MIT",
+	"devDependencies": {
+		"prettier": "3.3.3",
+		"solid-devtools": "^0.29.2",
+		"typescript": "^5.3.3",
+		"vite": "^5.0.11",
+		"vite-plugin-solid": "^2.8.2"
+	},
+	"dependencies": {
+		"@solidjs/router": "^0.14.1",
+		"bootstrap": "5.3.3",
+		"solid-js": "^1.8.11"
+	}
 }
